--- a/client/src/components/Privacy_policy/Privacy.css
+++ b/client/src/components/Privacy_policy/Privacy.css
@@ -361,6 +361,10 @@ table tr th {
   .lorem_wrapper ul.p-p-links {
     margin-left: 30px;
 }
+.lorem_wrapper li.dolores::after {
+  left: -37px;
+  top: 9px;
+}
 table tr th {
   font-size: 14px;
   text-align: center;
