--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -124,7 +124,7 @@ img.check_true_img {
 }
 .form_box_input .form-group
 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .form_box_input .form-group .form-control {
     border-radius: 10px;
@@ -145,6 +145,12 @@ img.check_true_img {
   .form_box_input .form-group .icon {
     position: absolute;
     left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.form_box_input .form-group .otp_icon {
+    position: absolute;
+    left: 8px;
     top: 50%;
     transform: translateY(-50%);
 }
@@ -313,6 +319,19 @@ button.theme-greenBtn:disabled{
 	margin-bottom: 0px;
 	text-align: center;
 	font-size: 26px;
+}
+.otp-btn{
+	position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 12px;
+    border-radius: 20px;
+    padding: 0px 19px;
+    border: 2px solid #d9753b;
+    background-color: #ee9b004f;
+    color: #444;
+    font-size: 16px;
+    font-weight: 600;
 }
 /* Stay_Connected_wraper */
 .Stay_Connected_wraper{background: url('../images/Home/stay_connect_main.webp');min-height: 652px;background-size: cover;margin-bottom: 100px;padding: 100px 0;}
